feat: initial work on authentication